classDiagram

%% PageDoc----------------------------
PageDoc *-- PageGeneralInfo
PageDoc *-- PageMeta
PageDoc o-- TmptHub
PageDoc *-- TmptSET
PageDoc *-- CmptDocBUSH


%% TmptSet----------------------------
TmptSET o-- TmptHub

%% CmptTREE------------------------
CmptDocBUSH *-- CmptDocSET

%% CmptDocSET-------------------------
CmptDocSET o-- CmptDoc
CmptDocSET o-- CmptDoc

%% CmptDoc----------------------------
CmptDoc *-- DocAttachingPoint
CmptDoc o-- Tmpt
CmptDoc *-- CmptStyleDoc
CmptDoc *-- CmptStyleConfigDoc
CmptDoc *--o CmptHookDoc

%% CmptHookDoc------------------------
Explore infopage of creator posts and our exclusives


CmptHookDoc o-- TmptHook
CmptHookDoc *-- CmptHookStyleDoc
CmptHookDoc *-- CmptHookStyleConfigDoc
CmptHookDoc *-- DocAttacher


%% DocAttachingPoint----------
DocAttachingPoint o-- DocAttachingPointLocation

%% DocAttacher-------------------------
DocAttacher o-- DocAttacherLocation




